version 1.4 for mc 1.19 updated dependencies code cleanup